--- a/Frontend/css/time.css
+++ b/Frontend/css/time.css
@@ -1,11 +1,10 @@
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'DM Sans', sans-serif;
 }
 
 .topnav {
   overflow: hidden;
-  background-color: rgb(197, 217, 221);
+  background-color: #c5d9dd;
 }
 
 .topnav a {
@@ -17,49 +16,27 @@ body {
   display: inline;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+button {
+  background-color: #c5d9dd;
+  font-family: 'DM Sans', sans-serif;
 }
 
-/* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
-/* Modal Content */
+/* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: auto;
+  margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-button {
-    padding: 1% 1%;
+  width: 80%; /* Could be more or less, depending on screen size */
 }
