--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -58,15 +58,7 @@ input[type="password"] {
 }
 /*set a style for the buttons*/
 
-button {
-  background-color: #4caf50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
+
 /* set a hover effect for the button*/
 
 button:hover {
@@ -104,16 +96,6 @@ span.psw {
 }
 /*set styles for span and cancel button on small screens*/
 
-@media screen and (max-width: 300px) {
-  span.psw {
-    display: block;
-    float: none;
-  }
-  .cancelbtn {
-    width: 100%;
-  }
-}
-
 /*
 home screen 
 body{
@@ -136,9 +118,6 @@ body{
   text-align: center;
 }
 
-.button {
-  text-align: center;
-}
 .btn {
   border: 1px solid white;
   padding: 10px 30px;
@@ -222,3 +201,156 @@ h1{
   padding: 0px;
 }
 */
+
+body {
+  background-color: cornflowerblue;
+}
+
+h3 {
+  text-align: center;
+  font-weight: bold;
+  font-size: xx-large;
+  color: white
+}
+
+p {
+  text-align: left;
+  font-weight: bold;
+  font-size: x-large;
+  color: white
+}
+
+.clock{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  border: 1px solid rgba(0,0,0,0.3);
+  padding: 3px 60px;
+}
+
+.cap {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 20px 0;
+}
+
+.cap p {
+  color:#fff;
+  text-transform: uppercase;
+  margin: 0 0 10px;
+  padding: 0;
+  font-weight: bold;
+  letter-spacing: 1px;
+  float: right;
+  position: relative;
+  top: -25px;
+}
+
+.caps {
+  background: #262626;
+  padding: 4px;
+  box-sizing: border-box;
+  border-radius: 25px;
+}
+
+.caps_level {
+  background: green;
+  width:100%;
+  height: 10px;
+  border-radius: 25px;
+}
+
+
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+#clockbox {
+  font-size: large;
+  color: black;
+  clear: none;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 15px;
+  text-align: center
+}
+
+table {
+  border-spacing: 5px;
+}
+
+.split {
+  height: 70%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  margin-top: 300px;
+}
+
+.left {
+  left: 0;
+  background-color: #111;
+}
+
+.right {
+  right: 0;
+  background-color: red;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.centered img {
+  width: 150px;
+  border-radius: 50%;
+}
